[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
blake3 = "1.5.1"
clap = { version = "4.5.8", features = ["derive"] }
flate2 = "1.0.30"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
sha2 = "0.10.8"
tar = "0.4.41"
tokio = { version = "1.38.0", features = ["full"] }
zip = "2.1.3"

[dev-dependencies]
warp = "0.3.7"
tempfile = "3.10.1"

[lib]
name = "downloader"
path = "src/lib.rs"

[[bin]]
name = "downloader-bin"
path = "src/main.rs"
